--- a/introduction/templates/introduction/base.html
+++ b/introduction/templates/introduction/base.html
@@ -74,7 +74,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html">Flat<span>Point.</span></a>
+                            <a class="navbar-brand" href="index.html">Changes<span>Team</span></a>
                         </div>
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -109,7 +109,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="widget about-us">
-                                <span class="footer-brand">Flat<span>Point.</span></span>
+                                <span class="footer-brand">changes<span>team.</span></span>
                                 <p>Lorem ipsum dolor sit amet, no consequat ullamcorper nec, te commune constituto intellegebat eam. Soleat populo id nec. Est in altera vocibus, et vim iudico adolescens, mel no discere mediocritatem. Nec ei sale honestatis, graeco melius eruditi qui et, id nam mucius maiorum. Pri diceret ornatus cu, dico quas aliquando vix ea, vix impetus invidunt honestatis id. An his everti animal.</p>
                             </div>
                             <!-- /.about-us -->
@@ -187,7 +187,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 footer-info-wrapper">
-                            <span>FlatPoint © 2013. Powered by <a href="index.html#">Firework</a></span>
+                            <span>Changes © 2015. Powered by <a href="index.html#">Meru</a></span>
                         </div>
                         <!-- /.footer-info-wrapper -->
                         <div class="col-xs-12 col-sm-6 social-link-wrapper">
